get other profile
