# go-backend/internal/api/routers/UserRouter.go
@@ -10,4 +10,5 @@ func (router *Router) UserRoutes(group *gin.RouterGroup) {
 	group.GET("/questionnaire", middleware.AuthMiddleware(), controller.UserQuestionnaire)
 	group.POST("/create_questionnaire", middleware.AuthMiddleware(), controller.CreateQuestionnaire)
 	group.GET("/profile", middleware.AuthMiddleware(), controller.Profile)
+	group.GET("profile/:key", controller.GetProfile)
 }
